test/errorLoopSplit.slq
def main(){
	x:=0:uint[n]; /// error
	for i in 0..10{
		forget(x);
	}
}
